# tidal-wave

./: .gitignore  .stylua.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bacon.toml  compose.yml  usb_elgato_wave_xlr.lua
src/: main.rs  stdio.rs  ui_state.rs  usb_device.rs
