[package]
name        = "tidal-wave"
version     = "0.1.0"
edition     = "2024"
license     = "MIT OR Apache-2.0"
description = "CLI to control Elgato Wave XLR via USB"
readme      = "README.md"
repository  = "https://github.com/titaniumtraveler/tidal-wave"
homepage    = "https://github.com/titaniumtraveler/tidal-wave"

[dependencies]
anyhow     = { version = "1.0.100", features = ["backtrace"] }
nusb       = { version = "0.2.0", features = ["tokio"] }
serde      = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio      = { version = "1.47.1", features = ["full"] }
